--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -29,15 +29,19 @@
         max-width: 50%;
         width: 50%;
         height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         position: relative;
 
         &:hover {
             .content__hidden-text {
-                transform: translate(-50%, -50%) scale(1);
+                transform: scale(1);
                 opacity: 1;
             }
 
             .content__logo {
+                opacity: 0.65; 
                 
                 &:nth-child(1) {
                     transform: translate(-230px, -53px);
@@ -78,10 +82,6 @@
         z-index: 2;
         transition: all ease-in-out .5s;
 
-        &_back {
-            z-index: 1;
-        }
-
         &:nth-child(1) {
             top: calc(50% - 100px);
             left: calc(50% - 100px);
@@ -114,10 +114,7 @@
     }
 
     &__hidden-text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(0);
+        transform: scale(0);
         opacity: 0;
         transition: all ease-in-out .5s;
         transition: .5s;
