--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,19 +4,23 @@
     .container {
         display: flex;
         justify-content: space-between;
+        align-items: flex-end;
+        position: relative;
+        z-index: 3;
     }
 
     &__form {
         width: 50%;
         max-width: 450px;
         display: flex;
+        filter: drop-shadow(0 0px 30px rgba(150, 150, 150, 0.2));
     }
 
     &__submit {
         background: #282F6A;
         border-radius: 0px 5px 5px 0px;
         padding: 0 40px;
-        display: flex;
+        display: flex; 
         align-items: center;
         justify-content: center;
         font-size: 16px;
@@ -101,5 +105,10 @@
         color: #000000;
         display: block;
         text-decoration: none;
+        transition: all ease-out .2s;
+
+        &:hover {
+            color: $purple; 
+        }
     }
 }
